<resources>
    <string name="app_name">Pokédex</string>
    <string name="error_message">Oops, something went wrong\nPlease try again</string>
    <string name="try_again">Try again</string>
    <string name="load_error_message">Something went wrong\nTry again</string>

    <!-- Home -->
    <string name="home_text">Home</string>

    <!-- About -->
    <string name="about_text">About</string>
    <string name="contact_us">Contact us</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="app_version_text">App version</string>
    <string name="app_version">1.0.0</string>

    <!-- Pokédex -->
    <string name="search_pokemon">Search a Pokémon</string>
    <string name="no_pokemon_found">No Pokémon found</string>
</resources>